--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.3",
     "@mui/material": "^5.15.3",
+    "@types/chart.js": "^2.9.41",
     "axios": "^1.6.4",
     "chart.js": "^4.4.1",
     "firebase": "^10.7.1",
