--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@monaco-editor/react": "^4.6.0",
     "@mui/icons-material": "^5.15.3",
     "@mui/material": "^5.15.3",
     "@types/chart.js": "^2.9.41",
     "axios": "^1.6.4",
     "chart.js": "^4.4.1",
     "firebase": "^10.7.1",
+    "monaco-typescript": "^4.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
