--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "acorn": "^8.11.3",
     "axios": "^1.6.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
