--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@uiw/react-codemirror": "^4.21.21",
     "axios": "^1.6.4",
     "chart.js": "^4.4.1",
+    "dayjs": "^1.11.10",
     "firebase": "^10.7.1",
     "monaco-typescript": "^4.10.0",
     "react": "^18.2.0",
